Revamp the contribution guide

--- a/beam-site/src/_includes/section-menu/contribute.html
+++ b/beam-site/src/_includes/section-menu/contribute.html
@@ -1,10 +1,27 @@
 <li><span class="section-nav-list-main-title">Contribute</span></li>
 <li><a href="{{ site.baseurl }}/contribute">Get started contributing</a></li>
 <li>
-  <span class="section-nav-list-title">Guides</span>
+  <span class="section-nav-list-title">How to contribute</span>
 
   <ul class="section-nav-list">
-    <li><a href="{{ site.baseurl }}/contribute/contribution-guide/">Contribution Guide</a></li>
+    <li><a href="{{ site.baseurl }}/contribute/contribution-guide/">Contribution guide</a></li>
+    <li><a href="{{ site.baseurl }}/contribute/committer-guide/">Committer guide</a></li>
+    <li><a href="{{ site.baseurl }}/contribute/website-contributions/">Website contributions</a></li>
+    <li><a href="{{ site.baseurl }}/contribute/feature-branches/">Feature branches</a></li>
+  </ul>
+</li>
+<li>
+  <span class="section-nav-list-title">IDE tips</span>
+
+  <ul class="section-nav-list">
+    <li><a href="{{ site.baseurl }}/contribute/intellij/">IntelliJ Tips</a></li>
+    <li><a href="{{ site.baseurl }}/contribute/eclipse/">Eclipse Tips</a></li>
+  </ul>
+</li>
+<li>
+  <span class="section-nav-list-title">Other Guides</span>
+
+  <ul class="section-nav-list">
     <li><a href="{{ site.baseurl }}/contribute/testing/">Testing guide</a></li>
     <li><a href="{{ site.baseurl }}/contribute/release-guide/">Release guide</a></li>
     <li><a href="{{ site.baseurl }}/contribute/ptransform-style-guide/">PTransform style guide</a></li>
