[BEAM-4431] Add "Edit this Page" button to website

--- a/website/src/_includes/header.html
+++ b/website/src/_includes/header.html
@@ -60,6 +60,12 @@
             <li><a href="https://www.apache.org/foundation/policies/conduct">Code of Conduct</a></li>
           </ul>
         </li>
+        <li>
+          <a href="https://github.com/apache/beam/edit/master/website/src/{{ page.path }}">
+            <img alt="Edit on Github" title="Edit on Github" style="height: 20px"
+                 src="{{ "/images/text_editor.png" | prepend: site.baseurl }}">
+          </a>
+        </li>
       </ul>
     </div>
 </nav>
