update with review feedback

--- a/website/src/_includes/header.html
+++ b/website/src/_includes/header.html
@@ -62,8 +62,7 @@
         </li>
         <li>
           <a href="https://github.com/apache/beam/edit/master/website/src/{{ page.path }}">
-            <img alt="Edit on Github" title="Edit on Github" style="height: 20px"
-                 src="{{ "/images/text_editor.png" | prepend: site.baseurl }}">
+            <i class="far fa-edit fa-lg" alt="Edit on Github" title="Edit on Github"></i>
           </a>
         </li>
       </ul>
