[BEAM-5735] Contributor guide improvements

--- a/website/src/_includes/section-menu/contribute.html
+++ b/website/src/_includes/section-menu/contribute.html
@@ -12,20 +12,33 @@
 
 <li><span class="section-nav-list-main-title">Contribute</span></li>
 <li><a href="{{ site.baseurl }}/contribute/">Get started contributing</a></li>
-<li><a href="https://cwiki.apache.org/confluence/display/BEAM/Using+IntelliJ+IDE">Using IntelliJ IDE</a></li>
+<li><a href="https://cwiki.apache.org/confluence/display/BEAM/Contribution+FAQ">FAQ</a></li>
 <li>
   <span class="section-nav-list-title">Technical Docs</span>
 
   <ul class="section-nav-list">
+    <li><a href="{{ site.baseurl }}/roadmap/">Roadmap</a></li>
     <li><a href="{{ site.baseurl }}/contribute/testing/">Testing guide</a></li>
-    <ul>
-      <li><a href="{{ site.baseurl }}/contribute/precommit-triage-guide/">Pre-commit Slowness Triage Guide</a></li>
-    </ul>
+    <li><a href="{{ site.baseurl }}/contribute/precommit-triage-guide/">Pre-commit Slowness Triage</a></li>
     <li><a href="{{ site.baseurl }}/contribute/ptransform-style-guide/">PTransform style guide</a></li>
     <li><a href="{{ site.baseurl }}/contribute/runner-guide/">Runner authoring guide</a></li>
     <li><a href="{{ site.baseurl }}/contribute/docker-images/">Docker images</a></li>
     <li><a href="{{ site.baseurl }}/contribute/design-documents/">Design documents</a></li>
     <li><a href="{{ site.baseurl }}/contribute/dependencies/">Dependencies guide</a></li>
+    <li><a href="{{ site.baseurl }}/contribute/feature-branches/">Feature branches</a></li>
+  </ul>
+</li>
+<li>
+  <span class="section-nav-list-title">Tips</span>
+  <ul class="section-nav-list">
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Using+IntelliJ+IDE">Using IntelliJ IDE</a></li>
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Java+Tips">Java development tips</a></li>
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Python+Tips">Python development tips</a></li>
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Go+Tips">Go development tips</a></li>
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Gradle+Tips">Gradle development tips</a></li>
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Jenkins+Tips/">Jenkins development tips</a></li>
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Website+Tips">Website development tips</a></li>
+    <li><a href="https://cwiki.apache.org/confluence/display/BEAM/Git+Tips">Git workflow</a></li>
   </ul>
 </li>
 <li>
@@ -37,8 +50,8 @@
 </li>
 <li>
   <span class="section-nav-list-title">Committers</span>
-
   <ul class="section-nav-list">
+    <li><a href="{{ site.baseurl }}/contribute/team/">PMC and committers</a></li>
     <li><a href="{{ site.baseurl }}/contribute/become-a-committer/">Become a committer</a></li>
     <li><a href="{{ site.baseurl }}/contribute/committer-guide/">Committer guide</a></li>
     <li><a href="{{ site.baseurl }}/contribute/release-guide/">Release guide</a></li>
